fix(tests): fix failing SaleService tests and update deprecated @NonNull import
- replace Collections.emptyList() with non-empty items in seller/customer
  not-found tests to avoid early BusinessConstraintException
- replace org.springframework.lang.NonNull with org.jspecify.annotations.NonNull
- fix InventoryServiceTest return type to Page<InventoryResponseDto>